@@ -1,6 +1,10 @@
 Version history
 ===============
 
+x.x:
+
+- added: normalize all URL's in the outgoing mail
+
 3.0 (2014-09-25):
 
 - changes for Elgg 1.9
